k8s/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linetime-backend
  name: linetime-backend
  namespace: linetime
spec:
  selector:
    matchLabels:
      app: linetime-backend
  template:
    metadata:
      labels:
        app: linetime-backend
    spec:
      containers:
      - image: linetime-backend
        imagePullPolicy: Never #get image from local ones
        name: linetime-backend
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
