k8s/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: linetime-backend
  name: linetime-backend
  namespace: linetime
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: linetime-backend
status:
  loadBalancer: {}
