k8s/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linetime-backend-ingress
  namespace: linetime
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /backend(/|$)(.*)        
        pathType: Prefix
        backend:
          service:
            name: linetime-backend
            port:
              number: 8080
